--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-Flask==2.0.1
-pandas==1.3.3
-numpy==1.21.2
-requests==2.26.0
-setuptools>=65.0.0
-wheel
-gunicorn
+Flask==2.3.3
+pandas==2.1.1
+requests==2.31.0
+numpy==1.25.2
+gunicorn==21.2.0
